Fix API usage and improve offline reliability

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         </span>
         <button id="refreshDataBtn" class="refresh-btn-compact" title="Refresh data">⟳</button>
       </div>
+      <div id="apiStatusBadge" class="api-status-badge" role="status" aria-live="polite">Checking API…</div>
       <span class="topbar-version">v<span id="appVersion">1.2.0</span></span>
       <button id="themeToggle" class="theme-toggle" title="Toggle theme">
         <span class="theme-icon-dark">🌙</span>
